Mon Aug  3 19:24:19 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * contrib/Utility.mpc:

	  utility no longer under ACE.
	
Sun Jun 21 21:22:20 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * contrib:

          . Updated the externals.

Sun Jun 21 21:17:29 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * contrib/CCF:

          . Updated the externals.

Fri Jun 19 11:33:19 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * Examples/Reference:
        * Examples/Reference/reference.xml:
        * Examples/Reference/reference.xsd:

          Example of idrefs.

        * MPC/config/utility.mpb:

          Compile fix.

        * XSC/be/CXX/Header.cpp:
        * XSC/be/CXX/Inline.cpp:
        * XSC/be/CXX/Source.cpp:

          Errata that I forgot to check in from the refcounted ptr fix.

Mon Jun  8 23:16:48 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * XSCRT/XSCRT/XML.hpp:
        * XSCRT/XSCRT/utils/Buffer_Writer_T.h:
        * XSCRT/XSCRT/utils/Buffer_Writer_T.cpp:
        * XSCRT/XSCRT/utils/Writer_T.h:
        * XSCRT/XSCRT/utils/Writer_T.cpp:

          . Fixed build errors with using the writer template with
            Xerces 3.x

Wed May 27 13:44:10 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * contrib:

          . Removed the external dependency on utilities located in ACE.

Wed May 27 13:41:07 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * contrib/Utility.mpc:

          . Since we are building XSC on top of ACE, we can remove the
            UTILITY_ROOT environment variable and just use the one
            directly in ACE.

Tue May 26 20:13:38 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * XSC/XSC.mpc:

          . Removed the boost_system base project since it was breaking
            builds on Ubuntu. Hopefully, this does not break builds on
            other non-Windows platforms.
